--- a/lab1/app/src/main/res/values/strings.xml
+++ b/lab1/app/src/main/res/values/strings.xml
@@ -11,4 +11,15 @@
         <item>Empresarial</item>
     </string-array>
 
+    <string-array name="todas">
+        <item>Todas</item>
+        <item>Moviles</item>
+        <item>Videojuegos</item>
+        <item>Multimedia</item>
+        <item>Ingles</item>
+        <item>Escrita</item>
+        <item>Mate discreta</item>
+        <item>Empresarial</item>
+    </string-array>
+
 </resources>
